Quorum3/Library/Tests/TypeCheckerGenerated/Fail/ImpAssignBoolObjTextObjField.quorum
class Main
    Text v
    v:SetValue(text)
    action Main
        Test(v)
    end

    action Test(Boolean var)
    end
end
